--- a/main/docs/stylesheets/extra.css
+++ b/main/docs/stylesheets/extra.css
@@ -1,7 +1,6 @@
 /* HEADINGS
 ========================================================================== */
 h1,
-h3,
 h4,
 h5,
 h6 {
@@ -16,6 +15,17 @@ h1 {
 h2 {
     color: var(--catppuccin-mocha-mauve) !important;
     text-align: center;
+}
+
+h3 {
+    color: var(--catppuccin-mocha-text) !important;
+    font-size: 24px !important;
+    border-left: 2px solid var(--catppuccin-latte-mauve);
+    padding-left: 20px;
+}
+
+h4 {
+    font-size: 20px !important;
 }
 
 /* BODY
